--- a/project.config.json
+++ b/project.config.json
@@ -1,23 +1,18 @@
 {
   "files": [
     {
-      "fileId": "1RgMhjtkXlbbf9uzSzy_xPRKwxcVZIZqVytgM_JoU4E4",
-      "type": "doc",
-      "name": "library"
-    },
-    {
-      "fileId": "1gDwO-32cgpBDn_0niV0iu6TqQTaRDr4nmSqnT53magY",
+      "fileId": "1DlJatZUWAWuLJx56XrbNuAD7NqQ4dULlrc_DsNEPw3E",
       "type": "sheet",
-      "name": "bookstores"
+      "name": "queen"
     }
   ],
   "to_bake": [
     {
-      "template": "bake-book",
-      "data": "library",
-      "array": "books",
+      "template": "bake-members",
+      "data": "queen",
+      "array": "members",
       "slug": "slug",
-      "path": "books"
+      "path": "members"
     }
   ]
 }
